--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midterm-FangfangChen</title>
-    <!-- Googgle Fonts Here -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>Logistics Studio - Fangfang Web Design/title>
+      <!-- Googgle Fonts Here -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Agdasima:wght@400;700&family=Bebas+Neue&family=Bellefair&family=Chathura:wght@100;300;400;700;800&family=Cuprum:ital,wght@0,400..700;1,400..700&family=Didact+Gothic&family=Figtree:ital,wght@0,300..900;1,300..900&family=Hind:wght@300;400;500;600;700&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Manrope:wght@200..800&family=Palanquin:wght@100;200;300;400;500;600;700&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap"
-      rel="stylesheet">
+      <link
+        href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Agdasima:wght@400;700&family=Bebas+Neue&family=Bellefair&family=Chathura:wght@100;300;400;700;800&family=Cuprum:ital,wght@0,400..700;1,400..700&family=Didact+Gothic&family=Figtree:ital,wght@0,300..900;1,300..900&family=Hind:wght@300;400;500;600;700&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Manrope:wght@200..800&family=Palanquin:wght@100;200;300;400;500;600;700&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
